Working on histogram

--- a/public/assets/css/pages/new_dashboard.css
+++ b/public/assets/css/pages/new_dashboard.css
@@ -14,10 +14,10 @@ body
     padding:0 !important;
 }
 
-.graph {
+/*.graph {
     height: 242px !important;
     overflow: hidden;
-}
+}*/
 .outer{
     margin-top: 0;
 }
